# mongox

./: 404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  test-suite.yml
cheat_sheet/: index.html
defining_documents/: index.html
docs/: cheat_sheet.md  defining_documents.md  index.md  queriying_documents.md
examples/: basic.py  embedded_models.py
mongox/: __init__.py  _helpers.py  database.py  exceptions.py  expressions.py  fields.py  index.py  models.py
queriying_documents/: index.html
scripts/: README.md  build  check  clean  coverage  docs  lint  publish  test
search/: search_index.json
tests/: conftest.py  test_database.py  test_embedded_models.py  test_indexes.py  test_integrations.py  test_models.py  test_multiple_models.py
