[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mongox"
version = "0.0.2"
description = "Python Mongodb ODM using Motor and Pydantic"
authors = ["Amin Alaee <mohammadamin.alaee@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aminalaee/mongox"
repository = "https://github.com/aminalaee/mongox"
keywords = ["mongodb", "asyncio", "odm", "databases"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
motor = "^2.4"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
isort = "^5.10.0"
black = "^21.10b0"
flake8 = "^4.0.1"
mypy = "^0.910"
coverage = {extras = ["toml"], version = "^6.1.1"}
mkdocs = "^1.2.3"
autoflake = "^1.4"
pytest-asyncio = "^0.16.0"
mkdocs-material = "^7.3.6"
mkautodoc = "^0.1.0"

[tool.isort]
profile = "black"
combine_as_imports = "True"

[tool.coverage.run]
source_pkgs = [
    "mongox",
    "tests",
]

[tool.mypy]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
